--- a/project/our profile/our_profile.html
+++ b/project/our profile/our_profile.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="../assets/css/Main_page_style.css">
     <link rel="stylesheet" href="../assets/css/style.css">
