--- a/project/petition/petition_page_3.html
+++ b/project/petition/petition_page_3.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="../assets/css/petition_style.css">
         <link rel="stylesheet" href="../assets/css/Main_page_style.css">
