--- a/project/KNfunding.html
+++ b/project/KNfunding.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+
 </head>
 <title>KN funding</title>
 <header>
@@ -12,7 +20,7 @@
     </div>
     <ul class="Login_Register">
         <li class="Login"><a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/payment login page/login_page.html" class="login_register">Login</a></li>
-        <li class="Register"><a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/payment login page/Register_page.html" class="login_register">Register</a></li>
+        
     </ul>
 
 </header>
@@ -24,7 +32,7 @@
             <h2 class="section_h2"><b class="slogan">Start a fundraiser or petition within 5 minutes!</b></h2>
             <div class="button_P_F">
                 <a href="./payment login page/Register_page.html"  ><button class="Button_petition"> START A PETITION</button></a>
-                <a href="./payment login page/Register_page.html"  ><button class="Button_fundraiser"> START A FUNDRAISER</button></a>
+                <a href="./payment login page/Register_page.html"  ><button class="Button_fundraiser"> START A CAMPAIGN</button></a>
             </div>
         </div>    
     </section>
@@ -303,6 +311,7 @@
                     <b class="choise_name"> Animal Welfare </b>
                     </a>
                 </div>
+                
                 <div class="education choise ">
                     <a href="./inside profile/Choise_inside.html" class="explore_button">
                     <b class="choise_name">   Education </b>
