--- a/project/inside profile/Inside_profile_3.html
+++ b/project/inside profile/Inside_profile_3.html
@@ -72,7 +72,7 @@
                         <div class="row_two">
                             <b >Medical Causes</b>
                            <p class="co_campaigner"> <img src="../assets/images/group.png" class="M_C_A"  width="20px" height="20px"/> <b>Co-Campaigner:Uma Sundar| M/O Adithya Sundar </b></p>
-                           <p class="co_campaigner"> <img src="./assets/images/user-avatar.png" class="M_C_A" width="20px" height="20px"/><b> :Adithya </b></p>
+                           <p class="co_campaigner"> <img src="../assets/images/user-avatar.png" class="M_C_A" width="20px" height="20px"/><b> :Adithya </b></p>
                         </div>
                         <div class="row_three"> 
                             <p>
