--- a/project/petition/fundraiser_page_3.html
+++ b/project/petition/fundraiser_page_3.html
@@ -27,7 +27,7 @@
 <body>
     <div class="information_page">
         <h2 class="heading">
-            Start Petition
+            Start a campaign
         </h2>
         <div class="first_page">
             <div class="info_story"><img src="../assets/images/accept.png" width="50px" height="50px" class="" />
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div   class="back_save ">
-            <a href="../petition/petition_page_2.html" ><button class="back">BACK</button></a>
+            <a href="../petition/fundraiser_page_2.html" ><button class="back">BACK</button></a>
             
             <a href="#"><button  class="submit save save_continue"> SUBMIT</button></a>
              
