--- a/project/petition/petition_page_1.html
+++ b/project/petition/petition_page_1.html
@@ -55,7 +55,7 @@
                 Short Description<textarea class="basic input_option"> </textarea>
             </div>
             <div class="Basic_info">
-                *Category 
+                Category 
                 <input type="text" list="count" class="option input_option" />
             
                 <datalist id="count">
@@ -69,12 +69,16 @@
                 </datalist>
             </div>
             <div class="Basic_info">
-                *Title 
+                Title 
                 <input placeholder="keep your title within 200 characters" class="title input_option"/>
 
             </div>
             <div class="Basic_info">
                 Campaigner Name <input type="text" class="name input_option" />
+
+            </div>
+            <div class="Basic_info">
+                Petition to<input type="text" class="petition_to input_option" />
 
             </div>
         </div>
