--- a/project/Main_page.html
+++ b/project/Main_page.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>KN funding</title>
     <link rel="stylesheet" href="./assets/css/Main_page_style.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+
 </head>
-<title>KN funding</title>
+
 <header>
     <a href="#"> <img src="./assets/images/logo.png" class="logo" /> </a>
  <div class="search_input_logo">
@@ -34,7 +39,7 @@
             <h2 class="section_h2"><b class="slogan">Start a fundraiser or petition within 5 minutes!</b></h2>
             <div class="button_P_F">
                 <a href="C:\Users\KarthikeyanRobert\Desktop\project\petition\petition_page_1.html"  ><button class="Button_petition"> START A PETITION</button></a>
-                <a href="#"  class="Button_fundraiser"></a><button class="Button_fundraiser"> START A FUNDRAISER</button></a>
+                <a href="C:\Users\KarthikeyanRobert\Desktop\project\petition\fundraiser_page_1.html" ><button class="Button_fundraiser"> START A CAMPAIGN</button></a>
             </div>
         </div>    
     </section>
