--- a/project/backers/backers_profile_1.html
+++ b/project/backers/backers_profile_1.html
@@ -9,11 +9,10 @@
        <a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/KNfunding.html#"> <img src="../assets/images/logo.png" class="logo" /> </a>
     <div class="search_input_logo">
         <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
-        <button class="search_button"><img src="./assets/images/search_logo.png" class="search_logo" /></button>
+        <button class="search_button"><img src="../assets/images/search_logo.png" class="search_logo" /></button>
     </div>
     <ul class="Login_Register">
         <li class="Login"><a href="../payment login page/login_page.html" class="login_register">Login</a></li>
-        <li class="Register"><a href="../payment login page/Register_page.html" class="login_register">Register</a></li>
     </ul>
 
 </header>
