--- a/project/inside profile/Inside_profile_1.html
+++ b/project/inside profile/Inside_profile_1.html
@@ -13,7 +13,7 @@
     </div>
     <ul class="Login_Register">
         <li class="Login"><a href="../payment login page/login_page.html" class="login_register">Login</a></li>
-        <li class="Register"><a href="../payment login page/Register_page.html" class="login_register">Register</a></li>
+        
     </ul>
 
 </header>
@@ -29,7 +29,7 @@
         <h2 class="heading">
             <ul class="backers_count">
                 <a class="about_backer" href="../inside profile/Inside_profile_1.html"><li>About</li></a>
-                <a class=" about_backer" href="C:\Users\KarthikeyanRobert\Desktop\project\backers\backers_profile_1.html"><li>Backers (0)</li></a>
+                <a class=" about_backer" href="../backers/backers_profile_1.html"><li>Backers (0)</li></a>
             </ul>
         </h2>
 
