crested new html's

--- a/project/KNfunding.html
+++ b/project/KNfunding.html
@@ -13,13 +13,13 @@
 </head>
 
 <header>
-       <a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/KNfunding.html#"> <img src="./assets/images/logo.png" alt="image" class="logo" /> </a>
+       <a href="./KNfunding.html"> <img src="./assets/images/logo.png" alt="image" class="logo" /> </a>
     <div class="search_input_logo">
         <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
         <button class="search_button"><img src="./assets/images/search_logo.png" alt="image" class="search_logo" /></button>
     </div>
     <ul class="Login_Register">
-        <li class="Login"><a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/payment login page/login_page.html" class="login_register">Login</a></li>
+        <li class="Login"><a href="./payment login page/login_page.html" class="login_register">Login</a></li>
         
     </ul>
 
@@ -27,7 +27,7 @@
 <body> 
     <section class="section_background">
         <div class="section">
-            <h1 class="section_h1">HELP EACH OTHER BY DONATING MONEY</h1>
+            <h1 class="section_h1">HELP EACH OTHER BY DONATING MONEY </h1>
             <h1 class="section_h1_sub">We know you need funds, we are here to help you</h1>
             <h2 class="section_h2"><b class="slogan">Start a fundraiser or petition within 5 minutes!</b></h2>
             <div class="button_P_F">
