--- a/project/Main_page.html
+++ b/project/Main_page.html
@@ -11,7 +11,7 @@
 </head>
 
 <header>
-    <a href="#"> <img src="./assets/images/logo.png" alt="image" class="logo" /> </a>
+    <a href="./Main_page.html"> <img src="./assets/images/logo.png" alt="image" class="logo" /> </a>
  <div class="search_input_logo">
      <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
      <button class="search_button"><img src="./assets/images/search_logo.png" alt="image" class="search_logo" /></button>
@@ -50,7 +50,7 @@
     <section class="people_profile">
       <div class="profiles_row_one">
         <div class="profiles">
-            <a href="./inside profile/Inside_profile_1.html" class="profile_info">
+            <a href="./After_login_pages/after_login_inside_profile/AL_inside_profile_1.html" class="profile_info">
             <div class="content">
                 <img src="./assets/images/story_1.jpg" alt="image" class="" />
 
@@ -93,7 +93,7 @@
             </a>
         </div>
         <div class="profiles">
-            <a href="./inside profile/Inside_profile_2.html" class="profile_info">
+            <a href="./After_login_pages/after_login_inside_profile/AL_inside_profile_2.html" class="profile_info">
             <div class="content">
                 <img src="./assets/images/story_2.jpg" alt="image" class="" />
 
@@ -135,7 +135,7 @@
             </a>
         </div>
         <div class="profiles">
-            <a href="./inside profile/Inside_profile_3.html" class="profile_info">
+            <a href="./After_login_pages/after_login_inside_profile/AL_inside_profile_3.html" class="profile_info">
             <div class="content">
                 <img src="./assets/images/story_3.jpg" alt="image" class="" />
 
@@ -179,7 +179,7 @@
       </div>  
       <div class="profiles_row_two">
         <div class="profiles">
-            <a href="./inside profile/Inside_profile_4.html" class="profile_info">
+            <a href="./After_login_pages/after_login_inside_profile/AL_inside_profile_4.html" class="profile_info">
             <div class="content">
                 <img src="./assets/images/story_4.jpg" alt="image" class="" />
 
@@ -221,7 +221,7 @@
             </a>
         </div>
         <div class="profiles">
-            <a href="./inside profile/Inside_profile_5.html" class="profile_info">
+            <a href="./After_login_pages/after_login_inside_profile/AL_inside_profile_5.html" class="profile_info">
             <div class="content">
                 <img src="./assets/images/story_5.jpg" alt="image" class="" />
 
@@ -263,7 +263,7 @@
             </a>
         </div>
         <div class="profiles">
-            <a href="./inside profile/Inside_profile_6.html" class="profile_info">
+            <a href="./After_login_pages/after_login_inside_profile/AL_inside_profile_6.html" class="profile_info">
             <div class="content">
                 <img src="./assets/images/story_6.jpg" alt="image" class="" />
 
@@ -316,36 +316,36 @@
             
             <div class="Explore_column">
                 <div class="animal_welfare choise">
-                    <a href="./inside profile/Choise_inside.html" class="explore_button">
+                    <a href="./After_login_pages/after_login_choiceinside/AL_choice_inside.html" class="explore_button">
                     <b class="choise_name"> Animal Welfare </b>
                     </a>
                 </div>
                 <div class="education choise">
-                    <a href="./inside profile/Choise_inside.html" class="explore_button">
+                    <a href="./After_login_pages/after_login_choiceinside/AL_choice_inside.html" class="explore_button">
                     <b class="choise_name">   Education </b>
                     </a>
                 </div>
             </div>
             <div class="Explore_column ">
                 <div class="children_welfar choise">
-                    <a href="./inside profile/Choise_inside.html" class="explore_button">
+                    <a href="./After_login_pages/after_login_choiceinside/AL_choice_inside.html" class="explore_button">
                     <b class="choise_name"> Children </b> 
                     </a>
                 </div> 
                 <div class="medical_causes choise">
-                    <a href="./inside profile/Choise_inside.html" class="explore_button">
+                    <a href="./After_login_pages/after_login_choiceinside/AL_choice_inside.html" class="explore_button">
                     <b class="choise_name">  Medical Causes </b>
                     </a>
                 </div>   
             </div>
             <div class="Explore_column ">
                 <div class="natural_disaster choise">
-                    <a href="./inside profile/Choise_inside.html" class="explore_button">
+                    <a href="./After_login_pages/after_login_choiceinside/AL_choice_inside.html" class="explore_button">
                        <b class="choise_name"> Natural Disaster</b>
                     </a>
                 </div>   
                 <div class="temple_welfare choise">
-                    <a href="./inside profile/Choise_inside.html" class="explore_button">
+                    <a href="./After_login_pages/after_login_choiceinside/AL_choice_inside.html" class="explore_button">
                        <b class="choise_name"> Temple</b>
                     </a>
                 </div> 
