--- a/project/backers/backers_profile_2.html
+++ b/project/backers/backers_profile_2.html
@@ -3,10 +3,14 @@
 <head>
     <link rel="stylesheet" href="../assets/css/Inside_profile_style.css">
     <link rel="stylesheet" href="../assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+       
 </head>
 <title>KN funding</title>
 <header>
-       <a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/KNfunding.html#"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
+       <a href="../KNfunding.html"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
     <div class="search_input_logo">
         <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
         <button class="search_button"><img src="../assets/images/search_logo.png" alt="image" class="search_logo" /></button>
