--- a/project/our profile/our_profile.html
+++ b/project/our profile/our_profile.html
@@ -10,7 +10,7 @@
 <header class="profile_head">
     <div class="header_1">
         <div>
-              <a href="#"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
+              <a href="../Main_page.html"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
         </div>    
         <div class="search_input_logo">
             <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
