--- a/project/payment login page/login_page.html
+++ b/project/payment login page/login_page.html
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-    <a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/KNfunding.html#"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
+    <a href="../KNfunding.html"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
     <div class="search_input_logo">
         <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
         <button class="search_button"><img src="../assets/images/search_logo.png" alt="image" class="search_logo" /></button>
@@ -69,7 +69,7 @@
             </div>
             <div class="create_account">
                 <button>
-                    <a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/payment login page/Register_page.html" class="create_account">CREAT ACCOUNT</a>
+                    <a href="../payment login page/Register_page.html" class="create_account">CREAT ACCOUNT</a>
                 </button>
 
             </div>
