--- a/project/petition/fundraiser_page_2.html
+++ b/project/petition/fundraiser_page_2.html
@@ -8,7 +8,7 @@
     </head>
     
 <header>
-    <a href="#"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
+    <a href="../Main_page.html"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
  <div class="search_input_logo">
      <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
      <button class="search_button"><img src="../assets/images/search_logo.png" alt="image" class="search_logo" /></button>
