--- a/project/inside profile/Choise_inside.html
+++ b/project/inside profile/Choise_inside.html
@@ -3,17 +3,21 @@
 <head>
    
     <link rel="stylesheet" href="../assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+       
    <title>KN funding</title> 
 </head>
 
 <header>
-       <a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/KNfunding.html#"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
+       <a href="../KNfunding.html"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
     <div class="search_input_logo">
         <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
         <button class="search_button"><img src="../assets/images/search_logo.png" alt="image" class="search_logo" /></button>
     </div>
     <ul class="Login_Register">
-        <li class="Login"><a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/login_page.html" class="login_register">Login</a></li>
+        <li class="Login"><a href="../payment login page/login_page.html" class="login_register">Login</a></li>
     </ul>
 
 </header>
