--- a/project/payment login page/payment_page1.html
+++ b/project/payment login page/payment_page1.html
@@ -4,11 +4,15 @@
         <link rel="stylesheet" href="../assets/css/payment_page_style.css">
         <link rel="stylesheet" href="../assets/css/style.css">
         <link rel="stylesheet" href="../assets/css/Inside_profile_style.css" >
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+       
         <title>KN funding</title>
     </head>
         
             <header>
-                    <a href="file:///C:/Users/KarthikeyanRobert/Desktop/project/KNfunding.html#"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
+                    <a href="../KNfunding.html"> <img src="../assets/images/logo.png" alt="image" class="logo" /> </a>
                 <div class="search_input_logo">
                     <input class="search_box" placeholder="Search Campaigns & Petitions"></input>
                     <button class="search_button"><img src="../assets/images/search_logo.png" alt="image" class="search_logo" /></button>
@@ -30,7 +34,7 @@
             <h2 class="heading">
                 <ul class="backers_count">
                     <a class="about_backer" href="../inside profile/Inside_profile_1.html"><li>About</li></a>
-                    <a class=" about_backer" href="C:\Users\KarthikeyanRobert\Desktop\project\backers\backers_profile_1.html"><li>Backers (0)</li></a>
+                    <a class=" about_backer" href="../backers/backers_profile_1.html"><li>Backers (0)</li></a>
                 </ul>
             </h2>
 
