--- a/project/KNfunding.html
+++ b/project/KNfunding.html
@@ -381,9 +381,9 @@
             </div>
         </section>    
         <section class="footer_section2">
-            <center class="copyrights">
-               <b> KN FUNDING is a Registered Trademark. © 2022 KN FUNDING. All Rights Reserved. Made by karthikeyan with 💗 </b>
-            </center>
+            <div class="copyrights">
+                <b> KN FUNDING is a Registered Trademark. © 2022 KN FUNDING. All Rights Reserved. Made by karthikeyan with 💗 </b>
+             </div>
         </section>
 
 
