--- a/project/petition/petition_page_1.html
+++ b/project/petition/petition_page_1.html
@@ -17,9 +17,11 @@
      <div class="profile_name">
          KARTHIKEYAN
      </div>
-     <div class="logo_profile">
-         <img src="../assets/images/user.png" alt="image" class="user_logo"/>
-     </div>
+     <a href="../our profile/our_profile.html">
+        <div class="logo_profile">
+            <img src="../assets/images/user.png" alt="image" class="user_logo"/>
+        </div>
+       </a>
 
  </div>
 
@@ -126,9 +128,9 @@
             </div>
         </section>    
         <section class="footer_section2">
-            <center class="copyrights">
-               <b> KN FUNDING is a Registered Trademark. © 2022 KN FUNDING. All Rights Reserved. Made by karthikeyan with 💗 </b>
-            </center>
+            <div class="copyrights">
+                <b> KN FUNDING is a Registered Trademark. © 2022 KN FUNDING. All Rights Reserved. Made by karthikeyan with 💗 </b>
+             </div>
         </section>
 
 
