--- a/project/After_login_pages/after_login_inside_profile/AL_inside_profile_5.html
+++ b/project/After_login_pages/after_login_inside_profile/AL_inside_profile_5.html
@@ -59,7 +59,7 @@
                     <p><b> This campaign has been verified by KN Funding & medical team at the Hospital!</b></p>
                 </div>
                 <div class="profile_row_two">
-                    <img src="../../assets/images/story_5.jpg" class=""  width="800px" height="500px"/>
+                    <img src="../../assets/images/story_5.jpg" alt="image" class=""  width="800px" height="500px"/>
                 </div>
                 <div class="profile_row_three">
                    
