--- a/project/After_login_pages/after_login_payment/AL_payment_1.html
+++ b/project/After_login_pages/after_login_payment/AL_payment_1.html
@@ -102,7 +102,7 @@
                     </button>
                 </div>
                 <div class="right_row_3">
-                    <p class="row_3_para">Campaingn Contribution</p> <p><img src="../../assets/images/rupee.png" class="" width="15px" height="15px" />1000</p>
+                    <p class="row_3_para">Campaingn Contribution</p> <p><img src="../../assets/images/rupee.png" alt="image" class="" width="15px" height="15px" />1000</p>
                     
                 </div>
                  <div class="right_row_4">
