--- a/project/our profile/my_campaigns.html
+++ b/project/our profile/my_campaigns.html
@@ -24,7 +24,7 @@
             </div>
             
             <div class="logo_profile">
-                <a href="./our profile/our_profile.html">
+                <a href="../our profile/our_profile.html">
                     <img src="../assets/images/user.png" alt="image" class="user_logo"/>
                 </a>
             </div>
@@ -37,6 +37,8 @@
             <a href="./our_profile.html" class=" profile_head_2"><li> DASHBOARD</li></a>
             <a href="./my_campaigns.html" class=" profile_head_2"><li> MY CAMPAIGNS</li></a>
             <a href="./my_petition.html" class=" profile_head_2"><li> MY PETITIONS</li> </a>
+            <a  href="../../index.html" class="profile_head_2 log_out"><li><img  src="../assets/images/logout.png" alt="image" class="log_out"/></li></a>
+    
         </ul>
     </div>  
  
