--- a/project/inside profile/Inside_profile_6.html
+++ b/project/inside profile/Inside_profile_6.html
@@ -107,7 +107,7 @@
 
 
                                 </ul>
-                                <a class="" href="../payment login page/payment_page6.html">    
+                                <a class="" href="../payment login page/login_page.html">    
                                     <button class="contribute_button">
                                     <img src="../assets/images/get-money.png" alt="image" class="" height="30px" width="25px"/>
                                     <b class="contribute">CONTRIBUTE</b>
