changed the path for petition button and campaign button

--- a/project/Main_page.html
+++ b/project/Main_page.html
@@ -38,8 +38,8 @@
             <h1 class="section_h1_sub">We know you need funds, we are here to help you</h1>
             <h2 class="section_h2"><b class="slogan">Start a fundraiser or petition within 5 minutes!</b></h2>
             <div class="button_P_F">
-                <a href="C:\Users\KarthikeyanRobert\Desktop\project\petition\petition_page_1.html"  ><button class="Button_petition"> START A PETITION</button></a>
-                <a href="C:\Users\KarthikeyanRobert\Desktop\project\petition\fundraiser_page_1.html" ><button class="Button_fundraiser"> START A CAMPAIGN</button></a>
+                <a href="../project/petition/petition_page_1.html"  ><button class="Button_petition"> START A PETITION</button></a>
+                <a href="../project/petition/fundraiser_page_1.html" ><button class="Button_fundraiser"> START A CAMPAIGN</button></a>
             </div>
         </div>    
     </section>
