--- a/project/payment login page/Register_page.html
+++ b/project/payment login page/Register_page.html
@@ -44,7 +44,7 @@
             <label>Password</label>
             <input 
             id="password"
-            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+            pattern="(?=.*\d)(?=.*[a-z]).{8,}"
             title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
             type="password" 
             placeholder="password*" 
