--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <title>KN funding</title>
+    <link rel="icon" type="image/x-icon" href="./project/assets/images/icon_logo.jpg">
 </head>
 
 <header>
