--- a/project/Main_page.html
+++ b/project/Main_page.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>KN funding</title>
+    <link rel="icon" type="image/x-icon" href="../project/assets/images/icon_logo.jpg">
     <link rel="stylesheet" href="./assets/css/Main_page_style.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
