--- a/project/payment login page/login_page.html
+++ b/project/payment login page/login_page.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
     <title>KN funding</title>
+    <link rel="icon" type="image/x-icon" href="./project/assets/images/logo.png">
 </head>
 
 <header>
