feat!: added create requst module

--- a/project/Main_page.html
+++ b/project/Main_page.html
@@ -19,7 +19,7 @@
  </div>
  <div class="profile_logo">
     
-     <div id="user_name" class="profile_name">
+     <div id="" class="profile_name">
          <!-- KARTHIKEYAN -->
      </div>
      <!-- <a href="./our profile/our_profile.html"> -->
@@ -46,8 +46,9 @@
             <h1 class="section_h1_sub">We know you need funds, we are here to help you</h1>
             <h2 class="section_h2"><b class="slogan">Start a fundraiser or petition within 5 minutes!</b></h2>
             <div class="button_P_F">
-                <a href="../project/petition/petition_page_1.html"  ><button class="Button_petition"> START A PETITION</button></a>
-                <a href="../project/petition/fundraiser_page_1.html" ><button class="Button_fundraiser"> START A CAMPAIGN</button></a>
+                <a href="./petition/fundraiser_page_1.html"><button class="Button_fundraiser">
+                    START A FUNDRAISER</button></a>
+                <!-- <a href="../project/petition/fundraiser_page_1.html" ><button class="Button_fundraiser"> START A CAMPAIGN</button></a> -->
             </div>
         </div>    
     </section>
