--- a/project/our profile/our_profile.html
+++ b/project/our profile/our_profile.html
@@ -53,7 +53,7 @@
         <ul class="profile_head_2">
             <a href="./our_profile.html" class=" profile_head_2"><li> DASHBOARD</li></a>
             <a href="./my_campaigns.html" class=" profile_head_2"><li> MY CAMPAIGNS</li></a>
-            <a href="./my_petition.html" class=" profile_head_2"><li> MY PETITIONS</li> </a>
+            <!-- <a href="./my_petition.html" class=" profile_head_2"><li> MY PETITIONS</li> </a> -->
 
     
         </ul>
