feat!: added new modules

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 class="search_logo" /></button>
     </div>
     <ul class="Login_Register">
-        <li class="Login"><a href="./project/payment login page/login_page.html" class="login_register" id="user_name">Login</a></li>
+        <li class="Login"><a href="./project/payment login page/login_page.html" class="login_register" id="">Login</a></li>
 
     </ul>
 
