--- a/project/petition/fundraiser_page_3.html
+++ b/project/petition/fundraiser_page_3.html
@@ -166,7 +166,7 @@
            console.log(form_1[form_1.length - 1])
 
         localStorage.setItem("Request_list",JSON.stringify(form_1))
-
+           window.location.href = "../Main_page.html"
         }
 
 
