feat: changed some features and wrote read me file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./project/assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
     <title>KN funding</title>
     <link rel="icon" type="image/x-icon" href="./project/assets/images/icon_logo.jpg">
+   
+
+
 </head>
+
+
+
 
 <header>
     <a href="./index.html"> <img src="./project/assets/images/logo.png" alt="image" class="logo" /> </a>
@@ -403,6 +411,9 @@
         
     </footer>
 
+    <!-- <script src = "./project/javascript/header.js"></script> -->
+
+    
     <script>
 
 
