--- a/project/our profile/our_profile.html
+++ b/project/our profile/our_profile.html
@@ -37,7 +37,7 @@
                <div class="dropdown">
                    <img src="../assets/images/user.png" alt="image" class="user_logo"/>
                    <div class="dropdown-content">
-                   <a href="../our profile/Profile_edit_page.html">profile</a>
+                   <a href="../our profile/Profile_edit_page.html">Edit profile</a>
                    <a href="#">Log Out</a>
                   
                    </div>
