--- a/project/petition/fundraiser_page_1.html
+++ b/project/petition/fundraiser_page_1.html
@@ -16,14 +16,29 @@
         <button class="search_button"><img src="../assets/images/search_logo.png" class="search_logo" /></button>
     </div>
     <div class="profile_logo">
-        <div class="profile_name">
+        <!-- <div class="profile_name">
             KARTHIKEYAN
         </div>
         <a href="../our profile/our_profile.html">
             <div class="logo_profile">
                 <img src="../assets/images/user.png" alt="image" class="user_logo" />
             </div>
-        </a>
+        </a> -->
+        <div id="user_name" class="profile_name">
+            <!-- KARTHIKEYAN -->
+        </div>
+        <!-- <a href="./our profile/our_profile.html"> -->
+        <div class="logo_profile">
+           <div class="dropdown">
+               <img src="../assets/images/user.png" alt="image" class="user_logo"/>
+               <div class="dropdown-content">
+               <a href="../our profile/our_profile.html">profile</a>
+               <a href="../index.html">Log Out</a>
+              
+               </div>
+             </div>
+        </div>
+       <!-- </a> -->
 
     </div>
 
