feat!: changed some new issues

--- a/project/After_login_pages/after_login_payment/AL_payment_1.html
+++ b/project/After_login_pages/after_login_payment/AL_payment_1.html
@@ -134,7 +134,7 @@
                     </p>
                 </div>
                 <div class="right_row_8">
-                    <a class="" href="#">    
+                    <a class="" href="../../payment login page/card_details.html">    
                         <button class="contribute_button">
                         <img src="../../assets/images/get-money.png" alt="image" class="" height="30px" width="25px"/>
                         <b class="contribute">CONTRIBUTE</b>
