--- a/project/payment login page/Register_page.html
+++ b/project/payment login page/Register_page.html
@@ -48,7 +48,7 @@
             pattern="(?=.*\d)(?=.*[a-z]).{8,}"
             title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
             type="password" 
-            placeholder="password*" 
+            placeholder="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters" 
             required="true" class="placeholder" />
          </div>
          <div class="input">
@@ -58,7 +58,7 @@
                 pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                 title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
                 type="password" 
-				placeholder="Conform password*" 
+				placeholder="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters" 
 				required="true" class="placeholder"/>
          </div>
          <div class="create_account">
