--- a/project/After_login_pages/after_login_inside_profile/AL_inside_profile_1.html
+++ b/project/After_login_pages/after_login_inside_profile/AL_inside_profile_1.html
@@ -124,7 +124,7 @@
 
                                 </ul>
                             
-                            <a class="" href="">    
+                            <a class="" href="../after_login_payment/AL_payment_1.html">    
                                 <button class="contribute_button" type="submit">
                                 <img src="../../assets/images/get-money.png" alt="image" class="" height="30px" width="25px"/>
                                 <b class="contribute">CONTRIBUTE</b>
