--- a/project/payment login page/login_page.html
+++ b/project/payment login page/login_page.html
@@ -47,7 +47,7 @@
                     pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                     title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
                     type="password"
-                    placeholder="Password"
+                    placeholder="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
                     required="true" 
                     class="input_1">
 
