--- a/project/petition/fundraiser_page_1.html
+++ b/project/petition/fundraiser_page_1.html
@@ -205,7 +205,8 @@
             "pb_text_2": string,
             "content_head": string,
             "content": string,
-            "days_left": string
+            "days_left": string,
+            "uuid":string
             })
                 localStorage.setItem("people_profile", JSON.stringify(people_profile));
                 alert("Successfully Posted :white_check_mark:");
