--- a/project/After_login_pages/after_login_inside_profile/AL_inside_profile_1.html
+++ b/project/After_login_pages/after_login_inside_profile/AL_inside_profile_1.html
@@ -74,7 +74,7 @@
                 <div class="profile_left">
                     <div class="profile_row_one">
                         <p>
-                            <b> This campaign has been verified by KN Funding & medical team at the Hospital!</b>
+                            <b style="color:black ;"> This campaign has been verified by KN Funding & medical team at the Hospital!</b>
                         </p>
                     </div>
                     <div class="profile_row_two">
@@ -109,14 +109,15 @@
                         <div class="row_three"> 
                             <p>
 
-                                <img src="../../assets/images/rupee.png" alt="image" class="" width="14px" height="14px" /> 
+                                ₹ 
                                 <b>
                                 0
                                 </b>
                                  <b>
                                  raised of 
                                 </b>
-                            <img src="../../assets/images/rupee.png" alt="image" class="" width="14px" height="14px" />
+                                ₹ 
+                            
                             <b id="goal"> 
                              <!-- 3000000 -->
                             </b>
@@ -144,24 +145,45 @@
                                         <input type="number" placeholder="Enter or Select an Amount" class="input_box">
                                         <div class="row_four">
                                             <ul class="amount">
-                                                <li class="amount_box_1">
-                                                    <img src="../../assets/images/rupee.png" alt="image" class="amount_img" width="14px" height="14px"> 1000
+                                                <li data-value="1000" class="amount_box_1">
+                                                    <!-- <img src="../../assets/images/rupee.png" alt="image" class="amount_img" width="14px" height="14px">  -->
+                                                   <b> ₹ 1000  </b>
                                                 </li>
-                                                <li class="amount_box_2">
-                                                    <img src="../../assets/images/rupee.png" alt="image" class="amount_img" width="14px" height="14px"> 3000
+                                                <li data-value="3000" class="amount_box_2">
+                                                    <!-- <img src="../../assets/images/rupee.png" alt="image" class="amount_img" width="14px" height="14px">  -->
+                                                <b> ₹ 3000 </b>
                                                 </li>
-                                                <li class="amount_box_3">
-                                                    <img src="../../assets/images/rupee.png" alt="image" class="amount_img" width="14px" height="14px"> 5000
+                                                <li  data-value="5000" class="amount_box_3">
+                                                    <!-- <img src="../../assets/images/rupee.png" alt="image" class="amount_img" width="14px" height="14px"> -->
+                                                <b>  ₹ 5000 </b>
                                                 </li>
 
                                             </ul>
                             
                                             <a class="" href="../after_login_payment/AL_payment_1.html">    
                                                 <button class="contribute_button" type="submit">
-                                                    <img src="../../assets/images/get-money.png" alt="image" class="" height="30px" width="25px">
-                                                    <b class="contribute">CONTRIBUTE</b>
+                                                    <!-- <img src="../../assets/images/get-money.png" alt="image" class="" height="30px" width="25px"> -->
+                                                    <b class="contribute">DONATE</b>
                                                 </button>
                                             </a>    
+
+                                            <!-- <form method="POST" action="https://www.crowdkash.com/add-to-cart" accept-charset="UTF-8" class="form-horizontal"><input name="_token" type="hidden" value="9vGnEkvh8Z74ngNV3F6iVUmKh4CxeJeRbRkj9HgU">
+                                                <input type="hidden" name="campaign_id" value="2685" />
+                                                <div class="donate_amount_field">
+                                                <div class="donate_currency"></div>
+                                                <input required type="number" step="1" min="1.00" name="amount" class="form-control" value="" placeholder="Enter or Select an Amount" />
+                                                </div>
+                                                <div class="donate-amount-placeholder">
+                                                <ul>
+                                                <li data-value="1000"> 1000</li>
+                                                <li data-value="3000"> 3000</li>
+                                                <li data-value="5000"> 5000</li>
+                                                </ul>
+                                                </div>
+                                                <div class="donate-form-button">
+                                                <button type="submit" class="btn btn-primary btn-block btn-lg" style="margin-top: 7px !important;"><i class="fa fa-heart" aria-hidden="true"></i>&nbsp;Contribute</button>
+                                                <div class="socialShareWrap mobile-social-share mobile-share" style="margin-top: -7px;">
+                                            </form>  -->
                                         </div>     
 
                                     </div>
